--- a/neon/backends/kernels/sass/hconv_bprop_C1_N64.sass
+++ b/neon/backends/kernels/sass/hconv_bprop_C1_N64.sass
@@ -26,54 +26,49 @@
 <CONSTANT_MAPPING>
     addr_lut : 4x<64*4>
 
-    param_Sum[0]       : c[0x0][0x140]
-    param_Sum[1]       : c[0x0][0x144]
-    param_I[0]         : c[0x0][0x148]
-    param_I[1]         : c[0x0][0x14c]
-    param_E[0]         : c[0x0][0x150]
-    param_E[1]         : c[0x0][0x154]
-    param_F[0]         : c[0x0][0x158]
-    param_F[1]         : c[0x0][0x15c]
-    param_alpha        : c[0x0][0x160]
-    param_beta         : c[0x0][0x164]
-    param_flags        : c[0x0][0x168]
-    param_offset_C     : c[0x0][0x16c]
-    param_N            : c[0x0][0x170]
-    param_K            : c[0x0][0x174]
-    param_D            : c[0x0][0x178]
-    param_H            : c[0x0][0x17c]
-    param_W            : c[0x0][0x180]
-    param_WN           : c[0x0][0x184]
-    param_HWN          : c[0x0][0x188]
-    param_DHWN         : c[0x0][0x18c]
-    param_C            : c[0x0][0x190]
-    param_CRST         : c[0x0][0x194]
-    param_RST          : c[0x0][0x198]
-    param_magic_RST    : c[0x0][0x19c]
-    param_shift_RST    : c[0x0][0x1a0]
-    param_RS           : c[0x0][0x1a4]
-    param_magic_RS     : c[0x0][0x1a8]
-    param_shift_RS     : c[0x0][0x1ac]
-    param_S            : c[0x0][0x1b0]
-    param_magic_S      : c[0x0][0x1b4]
-    param_shift_S      : c[0x0][0x1b8]
-    param_pad_d        : c[0x0][0x1bc]
-    param_pad_h        : c[0x0][0x1c0]
-    param_pad_w        : c[0x0][0x1c4]
-    param_str_d        : c[0x0][0x1c8]
-    param_str_h        : c[0x0][0x1cc]
-    param_str_w        : c[0x0][0x1d0]
-    param_Q            : c[0x0][0x1d4]
-    param_PQ           : c[0x0][0x1d8]
-    param_QN           : c[0x0][0x1dc]
-    param_PQN          : c[0x0][0x1e0]
-    param_MPQN         : c[0x0][0x1e4]
-    param_magic_Q      : c[0x0][0x1e8]
-    param_shift_Q      : c[0x0][0x1ec]
-    param_magic_PQ     : c[0x0][0x1f0]
-    param_shift_PQ     : c[0x0][0x1f4]
-    param_CRST8        : c[0x0][0x1f8]
-    param_MPQN8        : c[0x0][0x1fc]
+    param_I[0]         : c[0x0][0x140]
+    param_I[1]         : c[0x0][0x144]
+    param_E[0]         : c[0x0][0x148]
+    param_E[1]         : c[0x0][0x14c]
+    param_F[0]         : c[0x0][0x150]
+    param_F[1]         : c[0x0][0x154]
+    param_alpha        : c[0x0][0x158]
+    param_N            : c[0x0][0x15c]
+    param_K            : c[0x0][0x160]
+    param_D            : c[0x0][0x164]
+    param_H            : c[0x0][0x168]
+    param_W            : c[0x0][0x16c]
+    param_WN           : c[0x0][0x170]
+    param_HWN          : c[0x0][0x174]
+    param_DHWN         : c[0x0][0x178]
+    param_C            : c[0x0][0x17c]
+    param_CRST         : c[0x0][0x180]
+    param_RST          : c[0x0][0x184]
+    param_magic_RST    : c[0x0][0x188]
+    param_shift_RST    : c[0x0][0x18c]
+    param_RS           : c[0x0][0x190]
+    param_magic_RS     : c[0x0][0x194]
+    param_shift_RS     : c[0x0][0x198]
+    param_S            : c[0x0][0x19c]
+    param_magic_S      : c[0x0][0x1a0]
+    param_shift_S      : c[0x0][0x1a4]
+    param_pad_d        : c[0x0][0x1a8]
+    param_pad_h        : c[0x0][0x1ac]
+    param_pad_w        : c[0x0][0x1b0]
+    param_str_d        : c[0x0][0x1b4]
+    param_str_h        : c[0x0][0x1b8]
+    param_str_w        : c[0x0][0x1bc]
+    param_Q            : c[0x0][0x1c0]
+    param_PQ           : c[0x0][0x1c4]
+    param_QN           : c[0x0][0x1c8]
+    param_PQN          : c[0x0][0x1cc]
+    param_MPQN         : c[0x0][0x1d0]
+    param_magic_Q      : c[0x0][0x1d4]
+    param_shift_Q      : c[0x0][0x1d8]
+    param_magic_PQ     : c[0x0][0x1dc]
+    param_shift_PQ     : c[0x0][0x1e0]
+    param_CRST8        : c[0x0][0x1e4]
+    param_MPQN8        : c[0x0][0x1e8]
 </CONSTANT_MAPPING>
 
 <REGISTER_MAPPING>
