--- a/neon/backends/kernels/sass/hgemm_common_128x128.sass
+++ b/neon/backends/kernels/sass/hgemm_common_128x128.sass
@@ -331,12 +331,10 @@ STORE_C:
 24:-:-:-:1  @P6 FFMA c2, d2, beta, c2;
 08:-:-:-:3  @P6 FFMA c3, d3, beta, c3;
 
-[+ scale_int16() +]
-
---:-:1:-:1      [+ convert_out() +] c0, c0;
---:-:2:-:1      [+ convert_out() +] c1, c1;
---:-:3:-:1      [+ convert_out() +] c2, c2;
---:-:4:-:1      [+ convert_out() +] c3, c3;
+--:-:1:-:1      F2F.F16.F32 c0, c0;
+--:-:2:-:1      F2F.F16.F32 c1, c1;
+--:-:3:-:1      F2F.F16.F32 c2, c2;
+--:-:4:-:1      F2F.F16.F32 c3, c3;
 
 <SCHEDULE_BLOCK>
 --:-:-:-:1      ISETP.LT.AND P4, PT, cx00, param_n, P6;
@@ -394,12 +392,10 @@ STORE_C:
 24:-:-:-:1  @P6 FFMA c2, d2, beta, c2;
 08:-:-:-:3  @P6 FFMA c3, d3, beta, c3;
 
-[+ scale_int16() +]
-
---:-:1:-:1      [+ convert_out() +] c0, c0;
---:-:2:-:1      [+ convert_out() +] c1, c1;
---:-:3:-:1      [+ convert_out() +] c2, c2;
---:-:4:-:1      [+ convert_out() +] c3, c3;
+--:-:1:-:1      F2F.F16.F32 c0, c0;
+--:-:2:-:1      F2F.F16.F32 c1, c1;
+--:-:3:-:1      F2F.F16.F32 c2, c2;
+--:-:4:-:1      F2F.F16.F32 c3, c3;
 
 01:-:-:-:1  @P0 STG.E.S16 [C08y0 + 2x<00>], c0;
 02:5:-:-:1  @P1 STG.E.S16 [C08y0 + 2x<64>], c1;
