Conv Kernel improvements - fixed some bank conflicts - more accurate 4x4 winograd transforms - fix layer init for odd sizes - enable old kernels for large N - autotune direct conv update - get fprop/bprop working down to N=4 - add full compounding suppport: bias, relu, bsum, beta, bprop_relu, bprop_bias - add odd C/K dim support - new fused kernel work

--- a/neon/backends/kernels/sass/xconv_winograd_3x3_4x4_32x32.sass
+++ b/neon/backends/kernels/sass/xconv_winograd_3x3_4x4_32x32.sass
@@ -117,7 +117,7 @@ sub output_op   { return $determ ? 'STG.E.CG' : 'RED.E.ADD.F32.FTZ.RN'; }
 
       64-79 : shuffle_x<0-7>y0, shuffle_x<0-7>y1
 
-      84-85 : t<0-1>
+      84-85 ~ t<0-1>
 
        3, 2,11,19,10,18 : m<0-5>0
        1, 9, 0, 8,17,16 : m<0-5>1
@@ -126,16 +126,16 @@ sub output_op   { return $determ ? 'STG.E.CG' : 'RED.E.ADD.F32.FTZ.RN'; }
       72,73,74,75,76,77 : m<0-5>4
       78,79,80,81,82,83 : m<0-5>5
 
-       3,11,10 : w00, w20, w10
-       1, 0,17 : w01, w21, w11
-      27,26,24 : w02, w22, w12
-      66,67,69 : w03, w23, w13
-      72,73,75 : w04, w24, w14
-      78,79,81 : w05, w25, w15
+       3, 2,11 : w00, w10, w20
+       1, 9, 0 : w01, w11, w21
+      27,26,25 : w02, w12, w22
+      66,67,68 : w03, w13, w23
+      72,73,74 : w04, w14, w24
+      78,79,80 : w05, w15, w25
 
-       3, 2,10 : s00, s20, s10
-       1, 0, 8 : s02, s22, s12
-      66,67,69 : s01, s21, s11
+      19,10,18,69,70,71 ~ s00, s10, s20
+       8,17,16,75,76,77 ~ s02, s12, s22
+      24,64,65,81,82,83 ~ s01, s11, s21
 
 </REGISTER_MAPPING>
 
@@ -969,14 +969,15 @@ OUTPUT_TRANSFORM:
         my $w = sprintf "%02x", 1 << $i;
         $out .= qq{
 $w:-:-:-:1      FADD t0,   m1$i,  m2$i;
---:-:-:-:1      FADD t1,   m3$i,  m4$i;
---:-:-:-:1      FADD w1$i, m3$i, -m4$i;
---:-:-:-:1      FFMA w1$i, w1$i,  2.0, m1$i;
---:-:-:-:1      FADD w1$i, w1$i, -m2$i;
+$w:-:-:-:1      FADD t1,   m3$i,  m4$i;
+--:-:-:-:1      FADD m1$i, m1$i, -m2$i;
+--:-:-:-:1      FADD m3$i, m3$i, -m4$i;
 --:-:-:-:1      FADD w0$i, m0$i,  t0;
 --:-:-:-:1      FADD w0$i, w0$i,  t1;
---:-:-:-:1      FFMA w2$i, t1,    4.0, t0;
---:-:-:-:1      FADD w2$i, w2$i,  m5$i;
+--:-:-:-:1      FMUL w1$i, m1$i,  0.625;
+--:-:-:-:1      FFMA w1$i, m3$i,  1.5,      w1$i;
+--:-:-:-:1      FFMA w2$i, t1,    2.25,     m5$i;
+--:-:-:-:1      FFMA w2$i, t0,    0.390625, w2$i;
         };
     }
     return $out;
@@ -991,13 +992,14 @@ $w:-:-:-:1      FADD t0,   m1$i,  m2$i;
         $out .= qq{
 --:-:-:-:1      FADD t0,     w${i}1,  w${i}2;
 --:-:-:-:1      FADD t1,     w${i}3,  w${i}4;
---:-:-:-:1      FADD s${i}1, w${i}3, -w${i}4;
---:-:-:-:1      FFMA s${i}1, s${i}1,  2.0, w${i}1;
---:-:-:-:1      FADD s${i}1, s${i}1, -w${i}2;
+--:-:-:-:1      FADD w${i}1, w${i}1, -w${i}2;
+--:-:-:-:1      FADD w${i}3, w${i}3, -w${i}4;
 --:-:-:-:1      FADD s${i}0, w${i}0,  t0;
 --:-:-:-:1      FADD s${i}0, s${i}0,  t1;
---:-:-:-:1      FFMA s${i}2, t1,      4.0, t0;
---:-:-:-:1      FADD s${i}2, s${i}2,  w${i}5;
+--:-:-:-:1      FMUL s${i}1, w${i}1,  0.625;
+--:-:-:-:1      FFMA s${i}1, w${i}3,  1.5,      s${i}1;
+--:-:-:-:1      FFMA s${i}2, t1,      2.25,     w${i}5;
+--:-:-:-:1      FFMA s${i}2, t0,      0.390625, s${i}2;
         };
     }
     return $out;
