--- a/neon/backends/kernels/sass/xconv_xprop_common.sass
+++ b/neon/backends/kernels/sass/xconv_xprop_common.sass
@@ -370,9 +370,6 @@ LUT_LOOP:
 --:-:-:-:1      ISETP.GE.AND  P4, PT, x, RZ, PT;
 --:-:-:-:1      ISETP.GE.AND  P5, PT, y, RZ, PT;
 --:-:-:-:1      ISETP.GE.AND  P6, PT, z, RZ, P6;
-// rst_prime = t*RS + r*S + s
---:-:-:-:1      XMAD  rst_prime, r, param_S,  s;
---:-:-:-:1      XMAD  rst_prime, t, param_RS, rst_prime;
 // x_prime = x / str_w
 // x       = x % str_w
 --:-:-:-:1      XMAD    x_prime, x, param_magic_str_w, RZ;
@@ -402,7 +399,7 @@ LUT_LOOP:
 --:-:-:-:1      XMAD.LO2C sliceI, y_prime, param_WN,  sliceI;
 --:-:-:-:1      XMAD.LO2C sliceI, z_prime, param_HWN, sliceI;
 // sliceF = rst_prime * K
-01:-:-:-:1      XMAD sliceF, rst_prime, param_K, RZ;
+01:-:-:-:1      XMAD sliceF, rst, param_K, RZ;
 EOF
     }
 
