Add new runtime kernel build system - finish support for N=1,2

--- a/neon/backends/kernels/sass/xconv_winograd_3x3_2x2_32x32.sass
+++ b/neon/backends/kernels/sass/xconv_winograd_3x3_2x2_32x32.sass
@@ -14,8 +14,8 @@
 # limitations under the License.
 
 [-
-our $determ;
-our $type;
+our ($type, $IX, $D);
+our $determ = $D;
 our $dtype        = $type eq 'h' ?        '.U16' : '';
 our $convert_in   = $type eq 'h' ? 'F2F.F32.F16' : '';
 our $convert_out  = $type eq 'h' ? 'F2F.F16.F32' : '';
