--- a/neon/backends/kernels/sass/xconv_direct_updat_64x32.sass
+++ b/neon/backends/kernels/sass/xconv_direct_updat_64x32.sass
@@ -14,8 +14,9 @@
 # limitations under the License.
 
 [-
-our $determ;
-our $type;
+our ($type, $SN, $D);
+our $determ = $D;
+our $largeN = !$SN;
 our $dtype        = $type eq 'h' ?        '.U16' : '';
 our $convert_in   = $type eq 'h' ? 'F2F.F32.F16' : '';
 our $convert_out  = $type eq 'h' ? 'F2F.F16.F32' : '';
