Major conv kernel refactoring - Finish 4x4 fused kernel integration - make bsum deterministic - add full kernel compounding support - add kernel performance tuning - fix fp16 update bug. - fix race condition bug in direct conv - fix padding math for bprop - fix bugs in compounding

--- a/neon/backends/kernels/sass/hconv_xprop_X128_N64.sass
+++ b/neon/backends/kernels/sass/hconv_xprop_X128_N64.sass
@@ -33,11 +33,13 @@
     szShareI  : (64*8)
 
     addr_zero  : 4x<64*8*2 + 128*8*2 + 0>
+    addr_mpqk  : 4x<64*8*2 + 128*8*2 + 4>
     addr_m     : 4x<64*8*2 + 128*8*2 + 4>
     addr_p     : 4x<64*8*2 + 128*8*2 + 5>
     addr_q     : 4x<64*8*2 + 128*8*2 + 6>
-    addr_szLut : 4x<64*8*2 + 128*8*2 + 7>
-    addr_lut   : 4x<64*8*2 + 128*8*2 + 8>
+    addr_k     : 4x<64*8*2 + 128*8*2 + 7>
+    addr_szLut : 4x<64*8*2 + 128*8*2 + 8>
+    addr_lut   : 4x<64*8*2 + 128*8*2 + 10>
 
 [+ params() +]
 
@@ -56,12 +58,11 @@
 
        0-63 : czero<00-63>
 
-      64-67 : mpq<0-3>
-      64-70 : m, p, q, tidY, blkMPQ, one, tid
-
-     71-73  ~ blkF, blkI
-     74-109 ~ tid1, tid15, tidFX, tidIX
-     71-109 ~ mask_shr, rst, lutStore, lutStore2, warp_count, mt, pr, qs, dep_thd_mask, dep_thd_bits, dep_thd_cnt, t, r, s, rs, x, y, z, ballot, warp_slices, partial, endCRST, magicPQ, magicQ, negQ, negPQ, div1, div2, div3, str_d, str_h, str_w, rst_prime, x_prime, y_prime, z_prime
+      64-67 : mpqk<0-3>
+      64-67 : m, p, q
+      64-71 : idx_M, idx_P, idx_Q, idx_K, idx_N, tid, tidY, negOne
+     72-109 ~ tid1, tid15, tidFX, tidIX, idx_MPQk, idx_PQk, idx_Qk, idx_k, magic_PQk, magic_Qk, neg_PQk, neg_Qk, neg_k, div1, div2, div3, idx_P2, idx_Q2, q1, q2
+     72-109 ~ mask_shr, rst, lutStore, lutStore2, warp_count, mt, pr, qs, dep_thd_mask, dep_thd_bits, dep_thd_cnt, t, r, s, rs, x, y, z, ballot, warp_slices, partial, endCRST, str_d, str_h, str_w, rst_prime, x_prime, y_prime, z_prime
 
       64-79 : j0Ix<0-7>, j0Fy<0-7>
       80-95 : j1Ix<0-7>, j1Fy<0-7>
@@ -83,24 +84,25 @@
     112-124 ~ writeFs, writeIs, offsetIn, offsetFk, posCRST, posCRSTf, channel, lutSize, lutSizeRcp, lutOffset, offsetI, offsetIc, offsetFc
     125-127 ~ readFs, readIs, swapBuf
 
-    74-75   : Out<0-1>
-    74-75   : Stats<0-1>
-    76-95   : cs<0-7>, b<0-7>, c<0-3>
-    96-97   : Sum<0-1>
-    98-124  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX63, tidOY, to, k, n, MPQN, MPQN1, sum<0-3>, max, warp_max
+    72-91   : cs<0-7>, c<0-3>, b<0-7>
+    72-83   ~ x<0-7>
+    92-99   : out<0-7>
+   100-101  : Out<0-1>
+   102-103  : Sum<0-1>
+   104-124  ~ writeCs, readCs, alpha, k, n, sum<0-3>, offset, out_offset, bsum_offset, tidOX, tidOY, tidOX2, tidOX63
 
 </REGISTER_MAPPING>
 
-// 1 tid
-// 2 blkF
-// 3 blkI
-// 4 blkMPQ
-[+ load_ids() +]
+--:-:1:-:1      S2R tid,      SR_TID.X;
+--:-:2:-:1      S2R idx_MPQk, SR_CTAID.X;
+--:-:3:-:1      S2R idx_K,    SR_CTAID.Y;
+--:-:4:-:1      S2R idx_N,    SR_CTAID.Z;
 
 <SCHEDULE_BLOCK>
 01:-:-:-:1      ISETP.GE.AND P0, PT, tid, 32, PT;
 
 [+ load_zeros() +]
+[+ get_mpqk() +]
 
 // tidFX = (tid & 15) << 3
 // tidIX = (tid & 15) << 2
@@ -111,11 +113,10 @@
 --:-:-:-:1      SHR.U32 tidY,  tid,   4;
 
 // trackF += blkF*128 + tidFX + offset_K
-02:-:-:-:1      ISCADD  offsetFk, blkF, tidFX, 7;
---:-:-:-:1      IADD    offsetFk, offsetFk, param_offset_K;
+--:-:-:-:1      ISCADD  offsetFk, idx_K, tidFX, 7;
 
 // trackI += blkI*64 + tidIX
-0c:-:-:-:1      ISCADD  offsetIn, blkI, tidIX, 6;
+08:-:-:-:1      ISCADD  offsetIn, idx_N, tidIX, 6;
 
 // Remap the FX dim to avoid bank conflicts when storing to shared
 
@@ -242,11 +243,9 @@ LOOP:
 
 [+ main_loop() +]
 
-// 1 mpq
-// 2 tid
-// 3 blkF
-// 4 blkI
-[+ reload_ids() +]
+--:-:1:-:1      LDS.U.128 mpqk, [addr_mpqk];
+--:-:2:-:1      S2R tid,   SR_TID.X;
+--:-:3:-:1      S2R idx_N, SR_CTAID.Z;
 
 <SCHEDULE_BLOCK>
 
@@ -270,16 +269,15 @@ LOOP:
 --:-:-:-:1      SHL    readCs, readCs, 2;
 
 // n = blkI*64 + tidOX;
-08:-:-:-:1      ISCADD n, blkI, tidOX, 6;
+04:-:-:-:1      ISCADD n, idx_N, tidOX, 6;
 
 // Mul by 4 here expands k stride back out
 // Mul by 2 again to undo the bank conflict avoiding stride
 // k = blkF*128 + tidOY * 8
 --:-:-:-:1      SHL    tidOY,   tidOY, 3;
-04:-:-:-:1      ISCADD k, blkF, tidOY, 7;
---:-:-:-:1      IADD   k, k, param_offset_K;
+01:-:-:-:1      ISCADD k, idx_K, tidOY, 7;
 
-[+ output_setup(63) +]
+[+ output_setup(63, 2) +]
 
 </SCHEDULE_BLOCK>
 
