--- a/neon/backends/kernels/sass/hconv_xprop_X32_N128.sass
+++ b/neon/backends/kernels/sass/hconv_xprop_X32_N128.sass
@@ -33,11 +33,13 @@
     szShareI  : (128*8)
 
     addr_zero  : 4x<32*8*2 + 128*8*2 + 0>
+    addr_mpqk  : 4x<32*8*2 + 128*8*2 + 4>
     addr_m     : 4x<32*8*2 + 128*8*2 + 4>
     addr_p     : 4x<32*8*2 + 128*8*2 + 5>
     addr_q     : 4x<32*8*2 + 128*8*2 + 6>
-    addr_szLut : 4x<32*8*2 + 128*8*2 + 7>
-    addr_lut   : 4x<32*8*2 + 128*8*2 + 8>
+    addr_k     : 4x<32*8*2 + 128*8*2 + 7>
+    addr_szLut : 4x<32*8*2 + 128*8*2 + 8>
+    addr_lut   : 4x<32*8*2 + 128*8*2 + 10>
 
 [+ params() +]
 
@@ -56,10 +58,11 @@
 
        0-63 : czero<00-63>
 
-      64-67 : mpq<0-3>
-      64-69 : m, p, q, tidY, blkMPQ, one
-     70-113 ~ tid1, tidIX, tidFX
-     70-113 ~ mask_shr, rst, lutStore, lutStore2, warp_count, mt, pr, qs, dep_thd_mask, dep_thd_bits, dep_thd_cnt, t, r, s, rs, x, y, z, ballot, warp_slices, partial, endCRST, magicPQ, magicQ, negQ, negPQ, div1, div2, div3, str_d, str_h, str_w, rst_prime, x_prime, y_prime, z_prime
+      64-67 : mpqk<0-3>
+      64-69 : m, p, q
+      64-69 : idx_M, idx_P, idx_Q, idx_K, tidY, negOne
+     70-113 ~ tid1, tidIX, tidFX, idx_MPQk, idx_PQk, idx_Qk, idx_k, magic_PQk, magic_Qk, neg_PQk, neg_Qk, neg_k, div1, div2, div3, idx_P2, idx_Q2, q1, q2
+     70-113 ~ mask_shr, rst, lutStore, lutStore2, warp_count, mt, pr, qs, dep_thd_mask, dep_thd_bits, dep_thd_cnt, t, r, s, rs, x, y, z, ballot, warp_slices, partial, endCRST, str_d, str_h, str_w, rst_prime, x_prime, y_prime, z_prime
 
       64-79 : j0Ix<0-7>, j0Fy<0-7>
       80-95 : j1Ix<0-7>, j1Fy<0-7>
@@ -81,26 +84,28 @@
     114-115 : sliceIF<0-1>
 
     116-140 ~ writeFs, writeIs, offsetIn, offsetFk, posCRST, posCRSTf, channel, lutSize, lutSizeRcp, lutOffset, offsetI, offsetF, offsetIc, offsetFc
-    141-155 ~ readFs, readIs, swapBuf, tid, blkF, blkI, tid7, tid1_7, tid32, tid32_1
+    141-155 ~ readFs, readIs, swapBuf, tid, idx_N, tid7, tid1_7, tid32, tid32_1
 
-    72-91   : cs<0-7>, b<0-7>, c<0-3>
-    92-93   : Out<0-1>
-    92-93   : Stats<0-1>
-    94-95   : Sum<0-1>
-    96-140  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX63, tidOY, to, k, n, MPQN, MPQN1, MPQN4, MPQN12, sum<0-3>, max, warp_max
+    72-91   : cs<0-7>, c<0-3>, b<0-7>
+    72-83   ~ x<0-7>
+    92-99   : out<0-7>
+   100-101  : Out<0-1>
+   102-103  : Sum<0-1>
+   104-140  ~ writeCs, readCs, alpha, k, n, sum<0-3>, offset, out_offset, bsum_offset, tidOX, tidOY, tidOX2, tidOX63
 
 </REGISTER_MAPPING>
 
-// 1 tid
-// 2 blkF
-// 3 blkI
-// 4 blkMPQ
-[+ load_ids() +]
+--:-:1:-:1      S2R tid,      SR_TID.X;
+--:-:2:-:1      S2R idx_MPQk, SR_CTAID.X;
+--:-:3:-:1      S2R idx_K,    SR_CTAID.Y;
+--:-:4:-:1      S2R idx_N,    SR_CTAID.Z;
 
 <SCHEDULE_BLOCK>
 01:-:-:-:1      ISETP.GE.AND P0, PT, tid, 32, PT;
 
 [+ load_zeros() +]
+
+[+ get_mpqk() +]
 
 // tidIX = (tid & 7) << 3
 // tidFX = (tid & 7) << 2
@@ -111,12 +116,11 @@
 --:-:-:-:1      SHL     tidFX, tid7, 2;
 --:-:-:-:1      SHR.U32 tidY,  tid,  3;
 
-// trackF += blkF*32 + tidFX + offset_K
-02:-:-:-:1      ISCADD  offsetFk, blkF, tidFX, 5;
---:-:-:-:1      IADD    offsetFk, offsetFk, param_offset_K;
+// trackF += blkF*32 + tidFX
+--:-:-:-:1      ISCADD  offsetFk, idx_K, tidFX, 5;
 
 // trackI += blkI*128 + tidIX
-0c:-:-:-:1      ISCADD  offsetIn, blkI, tidIX, 7;
+08:-:-:-:1      ISCADD  offsetIn, idx_N, tidIX, 7;
 
 // writeFs = (32*tidY + tidFX) * 4
 --:-:-:-:1      ISCADD  writeFs, tidY, tidFX, 5;
@@ -135,14 +139,14 @@
 --:-:-:-:1      LOP.AND readFs, tid,    16;
 --:-:-:-:1      SHR.U32 readFs, readFs, 3;
 --:-:-:-:1      LOP.OR  readFs, readFs, tid1;
---:-:-:-:0      SHL     readFs, readFs, 4;
+--:-:-:-:1      SHL     readFs, readFs, 4;
 
 // readIs = ((tid & 32) >> 1) | ((tid >> 1) & 7) << 4
 --:-:-:-:1      LOP.AND tid32,   tid,   32;
 --:-:-:-:1      SHR.U32 tid32_1, tid32, 1;
 --:-:-:-:1      BFE.U32 tid1_7,  tid,   0x301; // 3 bits at position 1
 --:-:-:-:1      LOP.OR  readIs, tid1_7, tid32_1;
---:-:-:-:0      ISCADD  readIs, readIs, 4x<szShareF>, 4;
+--:-:-:-:1      ISCADD  readIs, readIs, 4x<szShareF>, 4;
 </SCHEDULE_BLOCK>
 
 [+ load_lut() +]
@@ -277,7 +281,7 @@ LOOP:
 
 [+ main_loop() +]
 
---:-:1:-:1      LDS.U.128 mpq, [addr_m];
+--:-:1:-:1      LDS.U.128 mpqk, [addr_mpqk];
 
 <SCHEDULE_BLOCK>
 
@@ -304,15 +308,15 @@ LOOP:
 --:-:-:-:1      SHL    readCs, readCs, 2;
 
 // n = blkI*128 + tidOX;
---:-:-:-:1      ISCADD n, blkI, tidOX, 7;
+--:-:-:-:1      ISCADD n, idx_N, tidOX, 7;
 
 // Mul by 4 here expands k stride back out
 // k = blkF*32 + tidOY * 4
 --:-:-:-:1      SHL    tidOY,   tidOY, 2;
---:-:-:-:1      ISCADD k, blkF, tidOY, 5;
---:-:-:-:1      IADD   k, k, param_offset_K;
+--:-:-:-:1      ISCADD k, idx_K, tidOY, 5;
 
-[+ output_setup(63) +]
+
+[+ output_setup(63, 1) +]
 
 </SCHEDULE_BLOCK>
 
