--- a/neon/backends/kernels/sass/hconv_xprop_X64_N64.sass
+++ b/neon/backends/kernels/sass/hconv_xprop_X64_N64.sass
@@ -35,11 +35,13 @@
     szShareI  : (64*8)
 
     addr_zero  : 4x<64*8*2 + 64*8*2 + 0>
+    addr_mpqk  : 4x<64*8*2 + 64*8*2 + 4>
     addr_m     : 4x<64*8*2 + 64*8*2 + 4>
     addr_p     : 4x<64*8*2 + 64*8*2 + 5>
     addr_q     : 4x<64*8*2 + 64*8*2 + 6>
-    addr_szLut : 4x<64*8*2 + 64*8*2 + 7>
-    addr_lut   : 4x<64*8*2 + 64*8*2 + 8>
+    addr_k     : 4x<64*8*2 + 64*8*2 + 7>
+    addr_szLut : 4x<64*8*2 + 64*8*2 + 8>
+    addr_lut   : 4x<64*8*2 + 64*8*2 + 10>
 
 [+ params() +]
 
@@ -58,12 +60,11 @@
 
        0-63 : czero<00-63>
 
-      64-67 : mpq<0-3>
-      64-70 : m, p, q, tidY, blkMPQ, one, tid
-
-     71-73  ~ blkF, blkI
-     74-111 ~ tid1, tidX
-     71-111 ~ mask_shr, rst, lutStore, lutStore2, warp_count, mt, pr, qs, dep_thd_mask, dep_thd_bits, dep_thd_cnt, t, r, s, rs, x, y, z, ballot, warp_slices, partial, endCRST, magicPQ, magicQ, negQ, negPQ, div1, div2, div3, str_d, str_h, str_w, rst_prime, x_prime, y_prime, z_prime
+      64-67 : mpqk<0-3>
+      64-67 : m, p, q
+      64-71 : idx_M, idx_P, idx_Q, idx_K, idx_N, tid, tidY, negOne
+     72-111 ~ tid1, tidX, idx_MPQk, idx_PQk, idx_Qk, idx_k, magic_PQk, magic_Qk, neg_PQk, neg_Qk, neg_k, div1, div2, div3, idx_P2, idx_Q2, q1, q2
+     72-111 ~ mask_shr, rst, lutStore, lutStore2, warp_count, mt, pr, qs, dep_thd_mask, dep_thd_bits, dep_thd_cnt, t, r, s, rs, x, y, z, ballot, warp_slices, partial, endCRST, str_d, str_h, str_w, rst_prime, x_prime, y_prime, z_prime
 
       64-79 : j0Ix<0-7>, j0Fy<0-7>
       80-95 : j1Ix<0-7>, j1Fy<0-7>
@@ -85,24 +86,26 @@
     114-125 ~ writeS, offsetIn, offsetFk, posCRST, posCRSTf, channel, lutSize, lutSizeRcp, lutOffset, offsetI, offsetIc, offsetFc
     126-127 ~ readFs, readIs
 
-    74-75   : Out<0-1>
-    74-75   : Stats<0-1>
-    76-95   : cs<0-7>, b<0-7>, c<0-3>
-    96-97   : Sum<0-1>
-    98-125  ~ writeCs, readCs, alpha, beta, flags, tidOX, tidOX63, tidOY, to, k, n, MPQN, MPQN1, sum<0-3>, max, warp_max
+    72-91   : cs<0-7>, c<0-3>, b<0-7>
+    72-83   ~ x<0-7>
+    92-99   : out<0-7>
+   100-101  : Out<0-1>
+   102-103  : Sum<0-1>
+   104-125  ~ writeCs, readCs, alpha, k, n, sum<0-3>, offset, out_offset, bsum_offset, tidOX, tidOY, tidOX63
 
 </REGISTER_MAPPING>
 
-// 1 tid
-// 2 blkF
-// 3 blkI
-// 4 blkMPQ
-[+ load_ids() +]
+--:-:1:-:1      S2R tid,      SR_TID.X;
+--:-:2:-:1      S2R idx_MPQk, SR_CTAID.X;
+--:-:3:-:1      S2R idx_K,    SR_CTAID.Y;
+--:-:4:-:1      S2R idx_N,    SR_CTAID.Z;
 
 <SCHEDULE_BLOCK>
 01:-:-:-:1      ISETP.GE.AND P0, PT, tid, 32, PT;
 
 [+ load_zeros() +]
+
+[+ get_mpqk() +]
 
 // tidX = (tid & 7) << 3
 // tidY = tid >> 3
@@ -110,12 +113,11 @@
 --:-:-:-:1      SHL     tidX, tidX, 3;
 --:-:-:-:1      SHR.U32 tidY, tid,  3;
 
-// trackF += blkF*64 + tidX + offset_K
-02:-:-:-:1      ISCADD  offsetFk, blkF, tidX, 6;
---:-:-:-:1      IADD    offsetFk, offsetFk, param_offset_K;
+// trackF += blkF*64 + tidX
+--:-:-:-:1      ISCADD  offsetFk, idx_K, tidX, 6;
 
 // trackI += blkI*64 + tidX
-0c:-:-:-:1      ISCADD  offsetIn, blkI, tidX, 6;
+08:-:-:-:1      ISCADD  offsetIn, idx_N, tidX, 6;
 
 // Remap the X dim to avoid bank conflicts when storing to shared
 // We can unmap this in the output
@@ -246,11 +248,9 @@ LOOP:
 
 [+ main_loop() +]
 
-// 1 mpq
-// 2 tid
-// 3 blkF
-// 4 blkI
-[+ reload_ids() +]
+--:-:1:-:1      LDS.U.128 mpqk, [addr_mpqk];
+--:-:2:-:1      S2R tid,   SR_TID.X;
+--:-:3:-:1      S2R idx_N, SR_CTAID.Z;
 
 <SCHEDULE_BLOCK>
 
@@ -275,16 +275,15 @@ LOOP:
 --:-:-:-:1      SHL    readCs, readCs, 2;
 
 // n = blkI*64 + tidOX;
-08:-:-:-:1      ISCADD n, blkI, tidOX, 6;
+04:-:-:-:1      ISCADD n, idx_N, tidOX, 6;
 
 // Mul by 4 here expands k stride back out
 // Mul by 2 again to undo the bank conflict avoiding stride
 // k = blkF*64 + tidOY * 8
 --:-:-:-:1      SHL    tidOY,   tidOY, 3;
-04:-:-:-:1      ISCADD k, blkF, tidOY, 6;
---:-:-:-:1      IADD   k, k, param_offset_K;
+01:-:-:-:1      ISCADD k, idx_K, tidOY, 6;
 
-[+ output_setup(63) +]
+[+ output_setup(63, 1) +]
 
 </SCHEDULE_BLOCK>
 
